namespace/games/wow-classic/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minecraft
  namespace: games
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minecraft
  template:
    metadata:
      labels:
        app: minecraft
    spec:
      runtimeClassName: youki
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      automountServiceAccountToken: false
      containers:
        - name: minecraft
          image: docker.io/itzg/minecraft-server:latest@sha256:8931be28ec6c9e375a3ef629d4e7e37828e576dcf63f43d94d281e5b8fd4c6f1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 25565
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: minecraft-config
