namespace/games/wow-classic/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minecraft-https
  namespace: games
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`minecraft.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: traefik
        - name: authentik
          namespace: traefik
      services:
        - name: minecraft
          port: 25565
  tls: 
    secretName: oglesby-io-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minecraft-http
  namespace: games
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`minecraft.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: traefik
        - name: redirect-https
          namespace: traefik
      services:
        - name: minecraft
          port: 25565
